[GTK] gsk_gl_command_queue_create_render_target: assertion failed (glCheckFramebufferStatus (GL_FRAMEBUFFER) == GL_FRAMEBUFFER_COMPLETE) when opening webkit://gpu https://bugs.webkit.org/show_bug.cgi?id=256873

Reviewed by Michael Catanzaro.

Add ScopedGLContext class to create a GLContext that is made current for
the current scope and restores the previous current context on destruction.
In case of GLX being used by the UI process, use a dedicated thread to
create the EGL context and fill the GPU information.

* Source/WebCore/platform/graphics/egl/GLContext.cpp:
(WebCore::GLContext::ScopedGLContext::ScopedGLContext):
(WebCore::GLContext::ScopedGLContext::~ScopedGLContext):
* Source/WebCore/platform/graphics/egl/GLContext.h:
* Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU):

Canonical link: https://commits.webkit.org/264311@main